--- a/sass/config/_variables.scss
+++ b/sass/config/_variables.scss
@@ -11,6 +11,7 @@ $red: #f38181;
 $green: #95e1d3;
 $yellow: #fce38a;
 $grey-light: #ececec;
+$grey-lighter: #b7b7b7;
 $grey-dark: #333333;
 $grey: #595959;
 
