--- a/sass/main/_footer.scss
+++ b/sass/main/_footer.scss
@@ -1,3 +1,228 @@
 /*--------------------------------------------------------------
 ## Footer
 --------------------------------------------------------------*/
+.footer {
+    background-color: #f8f8f8;
+
+    .entry-content {
+        padding-left: 5px;
+        padding-right: 10px;
+
+        p {
+            color: $grey-lighter;
+        }
+    }
+}
+
+.footer__container {
+
+}
+
+.footer__wrap {
+
+}
+
+// Left side
+.footer__box-wrap {
+
+}
+
+.footer__box-content {
+    margin-bottom: 40px;    
+}
+
+.footer__box-content-logo {
+    font-size: 46px;
+    font-family: $font-main;
+    font-weight: 600;
+    color: $grey-lighter;
+    transition: $dur $ease;
+    letter-spacing: -2px;
+    margin-bottom: 20px;
+    display: block;
+
+    &:hover {
+        transition: $dur $ease;
+        color: $grey;
+    }
+}
+
+.footer__box-social {
+    padding-left: 5px;
+}
+
+.footer__box-social-followers {
+    font-family: $font-main;
+    letter-spacing: -.9px;
+    font-weight: 400;
+    color: $grey-dark;
+    display: block;
+    margin-bottom: 10px;
+
+    strong {
+        font-size: 19px;
+    }
+}
+
+.footer__box-social-icon-wrap {
+    border-top: 1px solid #e5e5e5;
+    padding-top: 12px;
+    margin-bottom: 34px;
+    display: flex;
+    align-items: center;
+}
+
+.footer__box-social-icon-title {
+    font-family: $font-third;
+    font-size: 15px;
+    font-style: italic;
+    color: $grey;
+    letter-spacing: -.5px;
+}
+
+.footer__box-social-icon-list {
+    display: flex;
+    margin-left: 13px;
+}
+
+.footer__box-social-icon-list-item {
+    margin: 0 8px;
+}
+
+.footer__box-social-icon-list-item-link {
+    i {
+        font-family: $font-icon;
+        font-size: 17px;
+        color: $green;
+        width: 17px;
+        height: 17px;
+        font-style: normal;
+        transition: $dur $ease;
+
+        &:hover {
+            color: $red;
+            transition: $dur $ease;
+        }
+    }
+}
+
+.footer__box-social-news {
+    max-width: 379px;
+    width: 100%;
+    position: relative;
+}
+
+.footer__box-social-news-email {
+    min-height: 40px;
+    border: 1px solid #e5e5e5;
+    font-size: 15px;
+    font-family: $font-third;
+    color: $grey;
+    font-style: normal;
+    padding: 5px 150px 5px 10px;
+    letter-spacing: -.6px;
+    width: 100%;
+
+    &::placeholder {
+        color: #e5e5e5;
+        font-style: italic;
+    }
+}
+
+.footer__box-social-news-sub {
+    border: none;
+    background-color: $green;
+    color: $white;
+    font-weight: 600;
+    font-family: $font-main;
+    font-size: 14px;
+    text-align: center;
+    min-height: 40px;
+    min-width: 150px;
+    padding: 5px 10px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: $dur $ease;
+    cursor: pointer;
+
+    &:hover {
+        background-color: $red;
+        transition: $dur $ease;
+    }
+}
+
+// Middle
+.footer__blog-wrap {
+    
+}
+
+.footer__blog-title {
+
+}
+
+.footer__blog-item-wrap {
+
+}
+
+.footer__blog-item {
+
+}
+
+.footer__blog-item-img-wrap {
+
+}
+
+.footer__blog-item-img {
+
+}
+
+.footer__blog-item-content {
+
+}
+
+.footer__blog-item-content-link {
+
+}
+
+.footer__blog-item-content-date {
+
+}
+
+// Right side
+.footer__gallery-wrap {
+
+}
+
+.footer__gallery-title {
+
+}
+
+.footer__gallery-inner {
+
+}
+
+.footer__gallery-img-wrap {
+
+}
+
+.footer__gallery-img-link {
+
+}
+
+.footer__gallery-img {
+
+}
+
+
+// Copyright
+.footer__copyright {
+    p {
+
+    }
+
+    a {
+
+    }
+}
