--- a/sass/main/_header.scss
+++ b/sass/main/_header.scss
@@ -2,7 +2,8 @@
 ## Header
 --------------------------------------------------------------*/
 .header {
-    background-color: $green;
+    position: relative;
+    z-index: 1;
 }
 
 .header__wrap {
