--- a/css/main.css
+++ b/css/main.css
@@ -161,21 +161,25 @@ input::-ms-clear {
   font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
-  position: relative; }
+  position: relative;
+  letter-spacing: -.7px;
+  margin-bottom: 35px; }
   .section-title::after {
     content: '';
     position: absolute;
-    bottom: -40px;
+    bottom: -35px;
     left: 50%;
     transform: translateX(-50%);
     width: 60px;
-    height: 2px;
+    height: 3px;
     background-color: #f38181; }
 
 .section-pretitle {
   color: #333333;
   font-size: 24px;
-  font-family: "Kaushan Script", cursive; }
+  font-family: "Kaushan Script", cursive;
+  letter-spacing: -3px;
+  margin-bottom: 13px; }
 
 .entry-content p {
   font-family: "Roboto", sans-serif;
@@ -228,8 +232,8 @@ html {
     box-shadow: none; }
   .btn:hover {
     color: #fff;
-    background-color: #95e1d3;
-    border: 2px solid #95e1d3;
+    background-color: #f38181;
+    border: 2px solid #f38181;
     transition: 350ms ease; }
 
 /*--------------------------------------------------------------
@@ -582,8 +586,7 @@ html {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  padding-top: 95px; }
+  transform: translate(-50%, -50%); }
 
 .banner__slider-wrap {
   max-width: 100%;
@@ -596,7 +599,73 @@ html {
   align-items: center; }
 
 .banner__slide-pretitle {
-  margin-bottom: 39px; }
+  margin-bottom: 29px; }
 
 .banner__slide-title {
   margin-bottom: 110px; }
+
+.banner__dots {
+  position: absolute;
+  bottom: 70px;
+  left: 50%;
+  transform: translateX(-50%); }
+  .banner__dots .slick-dots {
+    display: flex;
+    justify-content: space-between; }
+    .banner__dots .slick-dots li {
+      max-width: 23.5%;
+      width: 100%;
+      height: 3px;
+      background-color: #fff;
+      position: relative;
+      transition: 350ms ease;
+      opacity: .5;
+      cursor: pointer; }
+      .banner__dots .slick-dots li::before {
+        content: '';
+        height: 3px;
+        width: 0;
+        background-color: #f38181;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: 350ms ease; }
+      .banner__dots .slick-dots li::after {
+        position: absolute;
+        left: 0;
+        bottom: -48px;
+        color: #fff;
+        font-family: "Montserrat", Arial, Helvetica, sans-serif;
+        font-size: 18px;
+        text-transform: uppercase;
+        letter-spacing: 1.5px; }
+      .banner__dots .slick-dots li:nth-child(1)::after {
+        content: '01 Intro'; }
+      .banner__dots .slick-dots li:nth-child(2)::after {
+        content: '02 Work'; }
+      .banner__dots .slick-dots li:nth-child(3)::after {
+        content: '03 About'; }
+      .banner__dots .slick-dots li:nth-child(4)::after {
+        content: '04 Contacts'; }
+      .banner__dots .slick-dots li button {
+        display: none; }
+      .banner__dots .slick-dots li.slick-active {
+        opacity: 1;
+        transition: 350ms ease; }
+        .banner__dots .slick-dots li.slick-active::before {
+          width: 25%;
+          transition: 350ms ease; }
+
+.basic-block {
+  text-align: center;
+  padding: 15px; }
+  .basic-block .entry-content {
+    margin: 76px auto 0;
+    max-width: 85%;
+    width: 100%;
+    text-align: center; }
+
+.hover-section {
+  padding-top: 76px; }
+  .hover-section .basic-block {
+    margin-bottom: 78px; }
