--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,3 +34,5 @@
 # Components
 --------------------------------------------------------------*/
 @import 'components/banner';
+@import 'components/basic-block';
+@import 'components/hover-section';
