--- a/sass/parts/_buttons.scss
+++ b/sass/parts/_buttons.scss
@@ -23,8 +23,8 @@
     
     &:hover {
 		color: $white;
-		background-color: $green;
-		border: 2px solid $green;
+		background-color: $red;
+		border: 2px solid $red;
         transition: $dur $ease;
     }
 }
