--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,3 +36,4 @@
 @import 'components/banner';
 @import 'components/hover-section';
 @import 'components/count';
+@import 'components/list-section';
