--- a/sass/main/_footer.scss
+++ b/sass/main/_footer.scss
@@ -7,6 +7,8 @@
     .entry-content {
         padding-left: 5px;
         padding-right: 10px;
+        margin: 0;
+        text-align: left;
 
         p {
             color: $grey-lighter;
