--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,3 +37,5 @@
 @import 'components/hover-section';
 @import 'components/count';
 @import 'components/list-section';
+@import 'components/bg-section';
+@import 'components/accordion';
