--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,24 @@ input::-ms-clear {
   display: none; }
 
 /* Internet Explorer ruls */
+/* width */
+::-webkit-scrollbar {
+  width: 4px; }
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ececec;
+  border-radius: 5px; }
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #95e1d3;
+  border-radius: 5px; }
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #95e1d3; }
+
 @-webkit-keyframes load6 {
   0% {
     transform: rotate(0deg);
@@ -875,7 +893,8 @@ html {
     right: 227px; }
 
 .accordion {
-  padding-top: 50px; }
+  padding-top: 50px;
+  padding-bottom: 120px; }
 
 .accordion__wrap {
   margin-top: 89px;
@@ -894,11 +913,29 @@ html {
   max-width: 50%;
   width: 100%; }
 
+.accordion__box {
+  margin-bottom: 11px; }
+  .accordion__box:last-of-type {
+    margin-bottom: 0; }
+  .accordion__box.active .accordion__box-head-arrow {
+    transform: translateY(-50%) rotate(-180deg);
+    transition: 350ms ease; }
+  .accordion__box.active .accordion__box-body {
+    display: block; }
+
 .accordion__box-head {
   position: relative;
   padding: 16px 60px;
   background-color: #fff;
-  border: 1px solid #e5e5e5; }
+  border: 1px solid #e5e5e5;
+  transition: 350ms ease;
+  cursor: pointer; }
+  .accordion__box-head:hover .accordion__box-head-title {
+    color: #95e1d3;
+    transition: 350ms ease; }
+  .accordion__box-head:hover .accordion__box-head-arrow::before {
+    color: #95e1d3;
+    transition: 350ms ease; }
 
 .accordion__box-head-icon {
   position: absolute;
@@ -906,7 +943,7 @@ html {
   top: 0; }
   .accordion__box-head-icon::before {
     content: '\f170';
-    color: #b7b7b7;
+    color: #95e1d3;
     font-size: 40px;
     height: 40px;
     font-family: "FontAwesome"; }
@@ -916,21 +953,36 @@ html {
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
   text-transform: uppercase;
   color: #333333;
-  font-weight: 600; }
+  font-weight: 600;
+  transition: 350ms ease;
+  letter-spacing: -.5px; }
 
 .accordion__box-head-arrow {
   position: absolute;
   right: 18px;
   top: 50%;
-  transform: translateY(-50%); }
+  transform: translateY(-50%);
+  transition: 350ms ease; }
   .accordion__box-head-arrow::before {
     content: '\f063';
     color: #b7b7b7;
     font-size: 20px;
     height: 20px;
-    font-family: "FontAwesome"; }
+    font-family: "FontAwesome";
+    transition: 350ms ease; }
 
-.accordion__box-body-inner .entry-content {
-  max-width: 100%;
-  margin: 0;
-  text-align: left; }
+.accordion__box-body {
+  padding: 17px 25px 21px 18px;
+  border: 1px solid #e5e5e5;
+  border-top: none;
+  display: none; }
+
+.accordion__box-body-inner {
+  max-height: 143px;
+  overflow-y: auto;
+  padding-right: 15px; }
+  .accordion__box-body-inner .entry-content {
+    max-width: 100%;
+    margin: 0;
+    text-align: left;
+    font-style: italic; }
